--- a/src/Modal/HeadersModal/HeadersModal.module.css
+++ b/src/Modal/HeadersModal/HeadersModal.module.css
@@ -147,7 +147,7 @@
   font-size: 14px;
   font-weight: 400;
   color: #1d1d1f; /* Light mode text */
-  background: rgba(243, 242, 248);
+  background: rgb(255, 255, 255);
   box-sizing: border-box;
   transition: all 0.3s ease, background 0.3s ease, color 0.3s ease; /* Smooth theme transition */
   -webkit-appearance: none;
