--- a/src/Modal/Modal.module.css
+++ b/src/Modal/Modal.module.css
@@ -89,7 +89,7 @@
 }
 
 .modalContent.darkTheme {
-  background: rgba(28, 28, 30, 0.95);
+  background: rgba(28, 28, 30);
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
 }
 
