--- a/src/Modal/Cards Template/CardsTemplate.module.css
+++ b/src/Modal/Cards Template/CardsTemplate.module.css
@@ -29,7 +29,7 @@
   overflow: visible;
   display: flex;
   flex-direction: column;
-  padding: 16px;
+  padding: 0;
   /* Removed min-height: 100% as no longer needed */
 }
 
