--- a/src/Dashboard/Date Picker/DatePicker.module.css
+++ b/src/Dashboard/Date Picker/DatePicker.module.css
@@ -43,10 +43,10 @@
   z-index: 2;
   transition: color 0.3s ease, transform 0.3s ease;
   flex: 1;
-  font-weight: 500; /* Medium weight for Apple aesthetic */
+  font-weight: 400; /* Medium weight for Apple aesthetic */
   font-size: 14px; /* Slightly larger for readability */
   letter-spacing: -0.01em;
-  color: #9f9f9f; /* Light mode */
+  color: #0A84FF;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -55,8 +55,8 @@
 }
 
 .datePicker button.active {
-  color: #000000;
-  font-weight: 500;
+  color: #0A84FF; 
+  font-weight: 400;
 }
 
 .datePicker.darkTheme button.active {
