--- a/src/Dashboard/Dashboard Plane/DashboardPlane.module.css
+++ b/src/Dashboard/Dashboard Plane/DashboardPlane.module.css
@@ -236,7 +236,7 @@
 @media (max-width: 768px) {
   .container {
     max-width: 100%;
-    padding: 0 8px;
+    padding: 0px;
   }
 
   .dashboardWrapper {
