--- a/src/Dashboard/Dashboard.module.css
+++ b/src/Dashboard/Dashboard.module.css
@@ -104,6 +104,10 @@
 }
 
 .buttonGroup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: rel;
   position: sticky;
   top: 0em;
   display: flex;
@@ -175,8 +179,7 @@
 }
 
 .editHeaderButton {
-  position: absolute;
-  top: 0px;
+  position: relative;
   right: 1em;
   border: none;
   padding: 0px 0;
@@ -263,11 +266,6 @@
   .windowContainer.large {
     width: 100%;
     max-width: 400px;
-  }
-
-  .buttonGroup {
-    flex-direction: column;
-    align-items: center;
   }
 
   .editHeaderButton {
