--- a/src/Dashboard/Dashboard.module.css
+++ b/src/Dashboard/Dashboard.module.css
@@ -5,7 +5,7 @@
   margin-left: auto;
   margin-right: auto;
   padding: 16px;
-  padding-top: 0;
+  padding-top: 8px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -108,9 +108,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: rel;
-  position: sticky;
-  top: 0em;
+  position: relative;
+  /* position: sticky;
+  top: 0em; */
   display: flex;
   gap: 8px;
   justify-content: space-between;
@@ -180,7 +180,7 @@
 }
 
 .editHeaderButton {
-  position: relative;
+  position: absolute;
   right: 1em;
   border: none;
   padding: 0px 0;
