--- a/src/Dashboard/Date Picker/DatePicker.module.css
+++ b/src/Dashboard/Date Picker/DatePicker.module.css
@@ -81,8 +81,7 @@
 
 @media (max-width: 768px) {
   .datePicker {
-    /* width: calc(100% - 16px); */
-    width: 300px;
+    width: calc(100% - 16px);
     height: 27.5px;
   }
 }
