--- a/src/Dashboard/Dashboard.module.css
+++ b/src/Dashboard/Dashboard.module.css
@@ -5,7 +5,7 @@
   margin-left: auto;
   margin-right: auto;
   padding: 16px;
-  padding-top: 8px;
+  padding-top: 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
