--- a/src/Sheets/Sheets.module.css
+++ b/src/Sheets/Sheets.module.css
@@ -1,9 +1,9 @@
 .sheetWrapper {
   width: 100%;
-  height: calc(100vh - 97px);
+  height: calc(100vh - 80px);
   display: flex;
   flex-direction: row;
-  padding: 16px 0;
+  /* padding: 16px 0; */
   box-sizing: border-box;
   overflow: hidden;
   gap: 16px;
