--- a/src/Dashboard/Dashboard.module.css
+++ b/src/Dashboard/Dashboard.module.css
@@ -1,9 +1,9 @@
 .dashboardWrapper {
   width: 100%;
   max-width: 1400px;
-  height: calc(100vh - 64px);
   margin-left: auto;
   margin-right: auto;
+  margin-top: 64px;
   padding: 16px;
   padding-top: 0;
   box-sizing: border-box;
@@ -111,7 +111,7 @@
 @media (max-width: 768px) {
   .dashboardWrapper {
     max-width: 100%;
-    height: calc(100vh - 56px);
+    margin-top: 56px;
     overflow-x: auto;
   }
 
